@@ -1,8 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Id$
-
-EAPI="prefix"
 
 DESCRIPTION="Links to Apple's OpenGL Framework"
 HOMEPAGE="http://www.apple.com/"
