@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/apple-opengl
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+  11 Apr 2009; Fabian Groffen <grobian@gentoo.org> +metadata.xml,
+  apple-opengl-2.ebuild:
+  Removed EAPI="prefix", added metadata.xml
 
 *apple-opengl-2 (09 Nov 2008)
 
